GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/Giving_Score__c.object-meta.xml
<CustomObject>
    <description>Calculates a Giving Score for the Contact, based on multiple variables</description>
    <label>Giving Score</label>
    <nameField>
        <label>Giving Score Sequence Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Giving Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>