GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Annual_Giving_Score__c.field-meta.xml
<CustomField>
    <fullName>Annual_Giving_Score__c</fullName>
    <formula>(Female_Indicator__c * -0.108721482985)
+
(IF(Undergrad_Indicator__c=TRUE,1,0) * -0.352980643366)
+
(IF(Legacy_Indicator__c=TRUE,1,0) * 0.0924075344941)
+
(Events_Last_3_Years_Score__c * 0.778742556146)
+
(Volunteering_Last_3_Years_Score__c * 0.559110068155)
+
(IF(Recent_Alumni_Indicator__c=TRUE,1,0) * -0.3622758866321)
+
(IF(Dual_Affiliate_Indicator__c=TRUE,1,0)  * 0.396072360354)
+
(IF(DC__c=TRUE,1,0) * -0.776690869788)
+
(IF(CFA__c=TRUE,1,0) * -0.776442889171)
+
(IF(CIT__c=TRUE,1,0) * -0.162089946983)
+
(IF(MCS__c=TRUE,1,0) * -0.0738900731853)
+
(IF(SCS__c=TRUE,1,0) * -0.406840258543)
+
(IF(Tepper__c=TRUE,1,0) * -0.320975961036)
+
(IF(Heinz__c=TRUE,1,0) * -0.377219036522)
+
(IF(CMU__c=TRUE,1,0) * -0.583880636724)
+
(IF(Married_Flag__c=TRUE,1,0) * 0.46705153903)
+
(IF(Email_Listed_Flag__c=TRUE,1,0) * 0.849726378933)
+
(IF(Home_Phone_Listed_Flag__c=TRUE,1,0) * 0.435165415217)
+
(IF(Business_Phone_Listed_Flag__c=TRUE,1,0) * 0.3567169349)
+
(Total_Volunteer_Activities__c * -0.0321739026328)
+
(Total_Events_Attended__c * 0.194046128348)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Giving Score</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>