GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Business_Phone_Listed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_Listed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECKED if Contact has a Business Phone listed</description>
    <inlineHelpText>CHECKED if Contact has a Business Phone listed</inlineHelpText>
    <label>Business Phone Listed Flag</label>
    <type>Checkbox</type>
</CustomField>