GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/CFA__c.field-meta.xml
<CustomField>
    <fullName>CFA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if College of Fine Arts is the Preferred School</description>
    <inlineHelpText>Checked if College of Fine Arts is the Preferred School</inlineHelpText>
    <label>CFA</label>
    <type>Checkbox</type>
</CustomField>