GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/CIT__c.field-meta.xml
<CustomField>
    <fullName>CIT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if College of Engineering is the Preferred School</description>
    <inlineHelpText>Checked if College of Engineering is the Preferred School</inlineHelpText>
    <label>CIT</label>
    <type>Checkbox</type>
</CustomField>