GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Current_Year_Event__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Event__c</fullName>
    <description>TRUE if the Contact has Event Guest records from THIS fiscal year.</description>
    <formula>IF (Current_Year_Events_Attended__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if the Contact has Event Guest records from THIS fiscal year.</inlineHelpText>
    <label>Current Year Event</label>
    <type>Checkbox</type>
</CustomField>