GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Current_Year_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Gifts__c</fullName>
    <description>Count of the number of Gift/Pledge records from the CURRENT fiscal year.</description>
    <inlineHelpText>Count of the number of Gift/Pledge records from the CURRENT fiscal year.</inlineHelpText>
    <label>Current Year Gifts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>