GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Current_Year_Giver_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Giver_Score__c</fullName>
    <description>Looks at the Current Year Giver flag and gives 1 point if the contact has donated in THIS CURRENT FISCAL YEAR.</description>
    <formula>IF ( Current_Year_Giver__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Looks at the Current Year Giver flag and gives 1 point if the contact has donated in THIS CURRENT FISCAL YEAR.</inlineHelpText>
    <label>Current Year Giver Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>