GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Current_year_Volunteer_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_year_Volunteer_Score__c</fullName>
    <description>Looks at the Current Year Volunteer flag and gives 1 point if the contact has volunteered in THIS CURRENT FISCAL YEAR.</description>
    <formula>IF ( Current_Year_Volunteer__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Looks at the Current Year Volunteer flag and gives 1 point if the contact has volunteered in THIS CURRENT FISCAL YEAR.</inlineHelpText>
    <label>Current Year Volunteer Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>