GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Demographic_Flags_Score__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Flags_Score__c</fullName>
    <description>Sums up the TRUE values in the Demographic Flags section, giving 1 point for each checkbox.</description>
    <formula>IF(Married_Flag__c = TRUE,1,0) 
+ 
IF(Email_Listed_Flag__c = TRUE,1,0) 
+ 
IF(Home_Phone_Listed_Flag__c = TRUE, 1,0)
+
IF(Business_Phone_Listed_Flag__c = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sums up the TRUE values in the Demographic Flags section, giving 1 point for each checkbox.</inlineHelpText>
    <label>Demographic Flags Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>