GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Doctorate_Education_Record__c.field-meta.xml
<CustomField>
    <fullName>Doctorate_Education_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows the LINK to the Education record that was found containing some type of DOCTORATE from CMU.</description>
    <inlineHelpText>Shows the LINK to the Education record that was found containing some type of DOCTORATE from CMU.</inlineHelpText>
    <label>Doctorate Education Record</label>
    <referenceTo>AQB__Education__c</referenceTo>
    <relationshipLabel>Giving Scores (Doctorate)</relationshipLabel>
    <relationshipName>Giving_Scores_Doctorate</relationshipName>
    <type>Lookup</type>
</CustomField>