GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Dual_Affiliate_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Dual_Affiliate_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECKED if the person has a Contact-to-Contact Spousal Relationship with another CMU Alumnus.</description>
    <inlineHelpText>CHECKED if the person has a Contact-to-Contact Spousal Relationship with another CMU Alumnus.</inlineHelpText>
    <label>Dual Affiliate Indicator</label>
    <type>Checkbox</type>
</CustomField>