GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Email_Listed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Email_Listed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECKED if the Contact has an Email address listed</description>
    <inlineHelpText>CHECKED if the Contact has an Email address listed</inlineHelpText>
    <label>Email Listed Flag</label>
    <type>Checkbox</type>
</CustomField>