GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Frequency_Score__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Score__c</fullName>
    <description>Frequency of Giving (Max 30 points):

(Giving Frequency) * (Years Giving Multiplier)</description>
    <inlineHelpText>Frequency of Giving (Max 30 points):

(Giving Frequency) * (Years Giving Multiplier)</inlineHelpText>
    <label>Frequency Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>