GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Giving_Span__c.field-meta.xml
<CustomField>
    <fullName>Giving_Span__c</fullName>
    <description>The length of time (in years) this person has been giving to CMU: (Most Recent Giving Year - First Giving Year)</description>
    <inlineHelpText>The length of time (in years) this person has been giving to CMU: (Most Recent Giving Year - First Giving Year)</inlineHelpText>
    <label>Giving Span</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>