GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Giving_Years__c.field-meta.xml
<CustomField>
    <fullName>Giving_Years__c</fullName>
    <description>List of all fiscal years in which the person donated to CMU</description>
    <inlineHelpText>List of all fiscal years in which the person donated to CMU</inlineHelpText>
    <label>Giving Years</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>