GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Gmail_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Gmail_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECKED If the Contact&apos;s preferred email is a GMAIL address.</description>
    <inlineHelpText>CHECKED If the Contact&apos;s preferred email is a GMAIL address.</inlineHelpText>
    <label>Gmail Indicator</label>
    <type>Checkbox</type>
</CustomField>