GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Greek_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Greek_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECKED If the Contact has a GREEK Interest</description>
    <inlineHelpText>CHECKED If the Contact has a GREEK Interest</inlineHelpText>
    <label>Greek Indicator</label>
    <type>Checkbox</type>
</CustomField>