GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Largest_Gift__c.field-meta.xml
<CustomField>
    <fullName>Largest_Gift__c</fullName>
    <description>Largest single gift from this person</description>
    <inlineHelpText>Largest single gift from this person</inlineHelpText>
    <label>Largest Gift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>