GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Last_Year_Events_Attended__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Events_Attended__c</fullName>
    <description>Counts the Event Guest records for the Contact for LAST Year.</description>
    <inlineHelpText>Counts the Event Guest records for the Contact for LAST Year.</inlineHelpText>
    <label>Last Year Events Attended</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>