GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Last_Year_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Gifts__c</fullName>
    <description>Count of the number of Gift/Pledge records from LAST fiscal year.</description>
    <inlineHelpText>Count of the number of Gift/Pledge records from LAST fiscal year.</inlineHelpText>
    <label>Last Year Gifts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>