GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Last_Year_Giver__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Giver__c</fullName>
    <description>TRUE if the Contact&apos;s Account has Gift/Pledge records from last fiscal year.</description>
    <formula>IF (  Last_Year_Gifts__c  &gt; 0, True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if the Contact&apos;s Account has Gift/Pledge records from last fiscal year.</inlineHelpText>
    <label>Last Year Giver</label>
    <type>Checkbox</type>
</CustomField>