GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Last_Year_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Volunteer__c</fullName>
    <description>TRUE if the Contact has Volunteer Position records from last fiscal year.</description>
    <formula>IF ( Last_Year_Volunteering__c  &gt; 0, True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if the Contact has Volunteer Position records from last fiscal year.</inlineHelpText>
    <label>Last Year Volunteer</label>
    <type>Checkbox</type>
</CustomField>