GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Lifetime_Total_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Total_Gifts__c</fullName>
    <description>Total number of Gifts given in the Lifetime of the Account</description>
    <inlineHelpText>Total number of Gifts given in the Lifetime of the Account</inlineHelpText>
    <label>Lifetime Total Gifts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>