GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Masters_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Masters_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECKED If the Contact has an Institutional Education Record from CMU containing some type of MASTERS.</description>
    <inlineHelpText>CHECKED If the Contact has an Institutional Education Record from CMU containing some type of MASTERS.</inlineHelpText>
    <label>Masters Indicator</label>
    <type>Checkbox</type>
</CustomField>