GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Preferred_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Graduation_Year__c</fullName>
    <description>Preferred Graduation Year from the Contact</description>
    <inlineHelpText>Preferred Graduation Year from the Contact</inlineHelpText>
    <label>Preferred Graduation Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>