GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Recency_Score__c.field-meta.xml
<CustomField>
    <fullName>Recency_Score__c</fullName>
    <description>POINTS AWARDED FOR LAST GIVING IN:
Current fiscal year:  20 points
Previous fiscal year:  15 points
2 fiscal years back:  10 points
3 fiscal years back:  5 points
4 fiscal years back: 2 points
5+ fiscal years back: 1 points
Never gave: 0 points</description>
    <inlineHelpText>POINTS AWARDED FOR LAST GIVING IN:
Current fiscal year:  20 points
Previous fiscal year:  15 points
2 fiscal years back:  10 points
3 fiscal years back:  5 points
4 fiscal years back: 2 points
5+ fiscal years back: 1 points
Never gave: 0 points</inlineHelpText>
    <label>Recency Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>