GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Recent_Alumni_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Recent_Alumni_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if the Contact has graduate from CMU in the last 9 years</description>
    <inlineHelpText>TRUE if the Contact has graduate from CMU in the last 9 years</inlineHelpText>
    <label>Recent Alumni Indicator</label>
    <type>Checkbox</type>
</CustomField>