GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Relationship_with_Legacy_Contact__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Legacy_Contact__c</fullName>
    <description>Shows the relationship between the person and the above linked family member (Legacy Contact Record).</description>
    <inlineHelpText>Shows the relationship between the person and the above linked family member (Legacy Contact Record).</inlineHelpText>
    <label>Relationship with Legacy Contact</label>
    <length>32</length>
    <type>Text</type>
</CustomField>