GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Research_Grade__c.field-meta.xml
<CustomField>
    <fullName>Research_Grade__c</fullName>
    <description>Captures the Grade curve of the Research Score</description>
    <inlineHelpText>Captures the Grade curve of the Research Score</inlineHelpText>
    <label>Research Grade</label>
    <length>2</length>
    <type>Text</type>
</CustomField>