GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Research_Score__c.field-meta.xml
<CustomField>
    <fullName>Research_Score__c</fullName>
    <formula>(Events_Last_3_Years_Score__c * 0.568982325) 
+
(Volunteering_Last_3_Years_Score__c * 0.506558075) 
+
(IF(Greek_Indicator__c=TRUE,1,0) * 0.149974541)
+
(IF(Gmail_Indicator__c=TRUE,1,0) * 0.036467209) 
+
(IF(Email_Listed_Flag__c=TRUE,1,0) * 0.541718159) 
+
(IF(Home_Phone_Listed_Flag__c=TRUE,1,0) * 0.04435388) 
+
(IF(Business_Phone_Listed_Flag__c=TRUE,1,0) * 0.286394794)
+
(IF(Dual_Affiliate_Indicator__c=TRUE,1,0) * 0.09516913)
+
(IF(Married_Flag__c=TRUE,1,0) * 0.969047089)
+
(Consecutive_Years_of_Giving__c * 0.2347275)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Research Score</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>