GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/RFM_Score__c.field-meta.xml
<CustomField>
    <fullName>RFM_Score__c</fullName>
    <description>Recency Score
+
Frequency Score
+
Monetary Score

(Out of a total of 100)</description>
    <formula>Recency_Score__c 
+
Frequency_Score__c 
+
Monetary_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recency Score
+
Frequency Score
+
Monetary Score

(Out of a total of 100)</inlineHelpText>
    <label>RFM Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>