GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/SCS__c.field-meta.xml
<CustomField>
    <fullName>SCS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if School of Computer Science is the Preferred School</description>
    <inlineHelpText>Checked if School of Computer Science is the Preferred School</inlineHelpText>
    <label>SCS</label>
    <type>Checkbox</type>
</CustomField>