GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Single_Flag__c.field-meta.xml
<CustomField>
    <fullName>Single_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECKED if the Contact is verifiably Single, UNCHECKED if the Contact is Married, Divorced, or Unknown.</description>
    <inlineHelpText>CHECKED if the Contact is verifiably Single, UNCHECKED if the Contact is Married, Divorced, or Unknown.</inlineHelpText>
    <label>Single Flag</label>
    <type>Checkbox</type>
</CustomField>