GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Three_Years_Ago_Events_Attended__c.field-meta.xml
<CustomField>
    <fullName>Three_Years_Ago_Events_Attended__c</fullName>
    <description>Counts the Event Guest records for the Contact from THREE YEARS AGO.</description>
    <inlineHelpText>Counts the Event Guest records for the Contact from THREE YEARS AGO.</inlineHelpText>
    <label>Three Years Ago Events Attended</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>