GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Three_Years_Ago_Volunteering__c.field-meta.xml
<CustomField>
    <fullName>Three_Years_Ago_Volunteering__c</fullName>
    <description>Count of the number of Volunteer records from THREE fiscal years ago.</description>
    <inlineHelpText>Count of the number of Volunteer records from THREE fiscal years ago.</inlineHelpText>
    <label>Three Years Ago Volunteering</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>