GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Two_Years_Ago_Event__c.field-meta.xml
<CustomField>
    <fullName>Two_Years_Ago_Event__c</fullName>
    <description>TRUE if the Contact has Event Guest records from 2 fiscals years ago.</description>
    <formula>IF ( Two_Years_Ago_Events_Attended__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if the Contact has Event Guest records from 2 fiscals years ago.</inlineHelpText>
    <label>Two Years Ago Event</label>
    <type>Checkbox</type>
</CustomField>