GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Two_Years_Ago_Events_Attended__c.field-meta.xml
<CustomField>
    <fullName>Two_Years_Ago_Events_Attended__c</fullName>
    <description>Counts the Event Guest records for the Contact from TWO YEARS AGO.</description>
    <inlineHelpText>Counts the Event Guest records for the Contact from TWO YEARS AGO.</inlineHelpText>
    <label>Two Years Ago Events Attended</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>