GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Two_Years_Ago_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Two_Years_Ago_Gifts__c</fullName>
    <description>Count of the number of Gift/Pledge records from TWO fiscal years ago.</description>
    <inlineHelpText>Count of the number of Gift/Pledge records from TWO fiscal years ago.</inlineHelpText>
    <label>Two Years Ago Gifts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>