GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Two_Years_Ago_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Two_Years_Ago_Volunteer__c</fullName>
    <description>TRUE if the Contact has Volunteer Position records from 2 fiscal years ago.</description>
    <formula>IF ( Two_Years_Ago_Volunteering__c &gt; 0, True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if the Contact has Volunteer Position records from 2 fiscal years ago.</inlineHelpText>
    <label>Two Years Ago Volunteer</label>
    <type>Checkbox</type>
</CustomField>