GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Undergrad_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Undergrad_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECKED If the Contact has an Institutional Education Record from CMU containing some type of BACHELORS.</description>
    <inlineHelpText>CHECKED If the Contact has an Institutional Education Record from CMU containing some type of BACHELORS.</inlineHelpText>
    <label>Undergrad Indicator</label>
    <type>Checkbox</type>
</CustomField>