GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Volunteer_Grade__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Grade__c</fullName>
    <description>Captures the Grade curve of the Volunteer Score</description>
    <inlineHelpText>Captures the Grade curve of the Volunteer Score</inlineHelpText>
    <label>Volunteer Grade</label>
    <length>2</length>
    <type>Text</type>
</CustomField>