GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Volunteer_Score__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Score__c</fullName>
    <formula>(Female_Indicator__c * 0.189384987826)
+
(IF(Undergrad_Indicator__c=TRUE,1,0) * 0.80368858654) 
+
(Events_Last_3_Years_Score__c * 1.36584996219)
+
(Giver_Last_3_Years_Score__c * -0.373591917274)
+
(RFM_Score__c * 0.0532185882037)
+
(Consecutive_Years_of_Giving__c * -0.0212127698466)
+
(IF(Recent_Alumni_Indicator__c=TRUE,1,0) * 1.19204594512)
+
(IF(Dual_Affiliate_Indicator__c=TRUE,1,0) * -0.0532467316046)
+
(IF(DC__c=TRUE,1,0) * -0.592004353637)
+
(IF(CFA__c=TRUE,1,0) * -1.30009580169)
+
(IF(CIT__c=TRUE,1,0) * -0.552612370634)
+
(IF(MCS__c=TRUE,1,0) * -0.483672943228)
+
(IF(SCS__c=TRUE,1,0) * -1.4178188914)
+
(IF(Tepper__c=TRUE,1,0) * -0.327911520701)
+
(IF(Heinz__c=TRUE,1,0) * 3.26063755034)
+
(IF(CMU__c=TRUE,1,0) * 0.740071140285)
+ 
(IF(Married_Flag__c=TRUE,1,0) * 0.4879072688716)
+
(IF(Email_Listed_Flag__c=TRUE,1,0) * 1.44689572807)
+
(IF(Home_Phone_Listed_Flag__c=TRUE,1,0) * -0.405441309619)
+
(IF(Business_Phone_Listed_Flag__c=TRUE,1,0) * 0.186415239575)
+
(Current_Year_Giver_Score__c  * 0.275669214462)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Score</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>