GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Volunteering_Last_3_Years_Score__c.field-meta.xml
<CustomField>
    <fullName>Volunteering_Last_3_Years_Score__c</fullName>
    <description>SUMS up the TRUE values in the Volunteering history section for the past 3 fiscal years, giving one point for each fiscal year the person volunteered (NOT COUNTING THE CURRENT YEAR).</description>
    <formula>IF((Last_Year_Volunteer__c == TRUE),1,0) 
+
IF((Two_Years_Ago_Volunteer__c == TRUE),1,0)
+
IF((Three_Years_Ago_Volunteer__c == TRUE),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SUMS up the TRUE values in the Volunteering history section for the past 3 fiscal years, giving one point for each fiscal year the person volunteered (NOT COUNTING THE CURRENT YEAR).</inlineHelpText>
    <label>Volunteering Last 3 Years Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>