GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/fields/Years_Giving_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Years_Giving_Multiplier__c</fullName>
    <description>Years of Giving:
20+ years = 3.0
15-19 years = 2.5
10-14 years = 2.0
5-9 years = 1.5
&lt;5 years = 1
No Giving = 0</description>
    <inlineHelpText>Years of Giving:
20+ years = 3.0
15-19 years = 2.5
10-14 years = 2.0
5-9 years = 1.5
&lt;5 years = 1
No Giving = 0</inlineHelpText>
    <label>Years Giving Multiplier</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>