GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/validationRules/Cant_Change_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_Contact</fullName>
    <active>true</active>
    <description>No one should be able to change the Contact Id</description>
    <errorConditionFormula>ISCHANGED(Contact__c) 
&amp;&amp;
$Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>You can&apos;t change the Contact record for this Giving Score sheet</errorMessage>
</ValidationRule>