GivingScoreCalc/force-app/main/default/objects/Giving_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Calculated_On__c</columns>
    <columns>Annual_Giving_Grade__c</columns>
    <columns>Annual_Giving_Score__c</columns>
    <columns>Volunteer_Grade__c</columns>
    <columns>Volunteer_Score__c</columns>
    <columns>Research_Grade__c</columns>
    <columns>Research_Score__c</columns>
    <columns>Greek_Indicator__c</columns>
    <columns>Gmail_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>